--- a/Labs/Lab3/MovieLib.Data.Memory/MovieLib.Data.Memory.csproj
+++ b/Labs/Lab3/MovieLib.Data.Memory/MovieLib.Data.Memory.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AF51CA9B-A1DC-48CC-A2BE-10DE34213898}</ProjectGuid>
+    <ProjectGuid>{BAE27CD5-A298-45E8-AB56-91EC78ED84D0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MovieLib</RootNamespace>
-    <AssemblyName>MovieLib</AssemblyName>
+    <RootNamespace>MovieLib.Data.Memory</RootNamespace>
+    <AssemblyName>MovieLib.Data.Memory</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,10 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMovieDatabase.cs" />
-    <Compile Include="Movie.cs" />
-    <Compile Include="ObjectValidator.cs" />
+    <Compile Include="MemoryMovieDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MovieLib\MovieLib.csproj">
+      <Project>{af51ca9b-a1dc-48cc-a2be-10de34213898}</Project>
+      <Name>MovieLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
